# gbadbg

./: .gitignore  CMakeLists.txt  README.md
docu/: ideas.md
docu/code/: CreaterPatern.md
emu/: CMakeLists.txt  alu_helper.cpp  alu_helper.h  cpu.cpp  cpu.h  gba_context.cpp  gba_context.h  instruction_return.cpp  instruction_return.h  instruction_string.cpp  instruction_string.h  parser.cpp  parser.h  rom.cpp  rom.h  status_register.cpp  status_register.h  util.cpp  util.h
emu/instr/: instruction.h
emu/instr/arm/: arm_adc.cpp  arm_add.cpp  arm_alu.h  arm_alu_instruction.cpp  arm_and.cpp  arm_b.cpp  arm_bic.cpp  arm_bl.cpp  arm_block_data_transfer.cpp  arm_block_data_transfer.h  arm_blx.cpp  arm_blx_imm.cpp  arm_branch.cpp  arm_branch.h  arm_bx.cpp  arm_cdp.cpp  arm_cmn.cpp  arm_cmp.cpp  arm_coprocessor.h  arm_coprocessor_data_transfer.cpp  arm_coprocessor_register_transfer.cpp  arm_eor.cpp  arm_globals.h  arm_half_double_signed_transfer.cpp  arm_half_double_signed_transfer.h  arm_instruction.h  arm_ldc.cpp  arm_ldm.cpp  arm_ldr.cpp  arm_ldr_d.cpp  arm_ldr_h.cpp  arm_ldr_sb.cpp  arm_ldr_sh.cpp  arm_mcr.cpp  arm_memory_transfer.cpp  arm_memory_transfer.h  arm_mla.cpp  arm_mov.cpp  arm_mrc.cpp  arm_mrs.cpp  (+36 more)
emu/instr/thumb/: thumb_add_offset_relative.cpp  thumb_add_offset_relative.h  thumb_add_offset_relative_add_pc.cpp  thumb_add_offset_relative_add_sp.cpp  thumb_add_offset_sp.cpp  thumb_add_offset_sp.h  thumb_add_offset_sp_add_neg.cpp  thumb_add_offset_sp_add_pos.cpp  thumb_add_sub.cpp  thumb_add_sub.h  thumb_add_sub_add_imm.cpp  (+103 more)
emu/mem/: emulation_memory.cpp  emulation_memory.h  memory.cpp  memory.h  parser_memory.cpp  parser_memory.h
gui/: CMakeLists.txt  CMakeLists.txt.in  main.cpp
tests/: CMakeLists.txt  gbadbg_test.cpp
